# hpp-affordance-corba

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  package.xml  pyproject.toml
.github/workflows/: nix.yml  update-flake-lock.yml
idl/hpp/corbaserver/affordance/: affordance.idl
include/hpp/corbaserver/affordance/: CMakeLists.txt  fwd.hh  server.hh
src/: CMakeLists.txt  affordance.impl.cc  affordance.impl.hh  hpp-affordance-corba.cc  server.cc
src/hpp/corbaserver/affordance/: .git-blame-ignore-revs  affordance.py  client.py
tests/: test-affordance-config.py  test-oriented-box.py
