[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost ~= 1.83.0",
  "cmeel[build]",
  "hpp-affordance[build]",
  "hpp-corbaserver[build]",
  "hpp-core[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "hpp-affordance",
  "hpp-corbaserver",
  "hpp-core"
]
description = "Corba server for Humanoid Path Planner Affordance applications"
license = "BSD-2-Clause"
name = "hpp-affordance-corba"
version = "6.0.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
